# InstacartETL

./: README.md  pyproject.toml
dbt_dagster/: .env.example  pyproject.toml  setup.py
dbt_dagster/dbt_dagster/: constants.py  definitions.py
dbt_dagster/dbt_dagster/assets/: base.py  seed_dim_date.py
dbt_dagster/dbt_dagster/jobs/: __init__.py  jobs.py
dbt_dagster/dbt_dagster/schedules/: __init__.py  schedules.py
dbt_orders/: dbt_project.yml  package-lock.yml  packages.yml
dbt_orders/models/: overview.md  schema.yml  sources.yml
dbt_orders/models/dim/: dim_date.sql  dim_products.sql
dbt_orders/models/fact/: fct_orders.sql
dbt_orders/models/stg/: stg_order_products.sql  stg_orders.sql  stg_products.sql
dbt_orders/seeds/: properties.yml
dbt_orders/snapshots/: scd_dim_products.sql
dbt_orders/tests/: test_date_range.sql
snowflake_scripts/: mock_copy_into_raw.sql  mock_setup.sql
